<?php declare(strict_types=1);

namespace Jawira\CaseConverter\Glue;

abstract class DashGluer extends Gluer
{
    /** @internal */
    public const DELIMITER = '-';
}
