<?php declare(strict_types=1);

namespace Jawira\CaseConverter\Glue;

abstract class UppercaseGluer extends Gluer
{
    /** @internal */
    public const DELIMITER = '';
}
